ansible-roles-roboshop-tf

--- a/roles/cart/templates/cart.service.j2
+++ b/roles/cart/templates/cart.service.j2
@@ -5,7 +5,8 @@ User=roboshop
 // highlight-start
 Environment=REDIS_HOST={{ REDIS_HOST }}
 Environment=CATALOGUE_HOST={{ CATALOGUE_HOST }}
-Environment=CATALOGUE_PORT=8080
+//Environment=CATALOGUE_PORT=8080
+Environment=CATALOGUE_PORT=80 # Here backend component will connect internally through backendLB only.
 // highlight-end
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=cart
